--- a/index.html
+++ b/index.html
@@ -905,13 +905,13 @@ export class ListComponent implements OnInit {
 			<hr>
 			<div class="chapter">
 				<h2 id="dynamic-data">Dynamic Data</h2>
-<p>The SpaceX app is starting to look great but you still have some work to do. Static data isn&#39;t much fun so let&#39;s work on getting data from the <a href="https://github.com/r-spacex/SpaceX-API">SpaceX Api</a>.</p>
+<p>The SpaceX app is starting to look great but you still have some work to do. Static data isn&#39;t much fun so let&#39;s work on getting data from the <a href="https://github.com/r-spacex/SpaceX-API">SpaceX API</a>.</p>
 <blockquote>
 <p>This chapter isn&#39;t going to cover anything specific to NativeScript but more how to access a restful API from Angular.</p>
 </blockquote>
 <h3 id="rxjs">RxJS</h3>
-<p>Before you call the SpaceX api we need to first discuss RxJS. You may have heard of it before - if so feel free to skip ahead. <a href="http://reactivex.io/rxjs/">RxJS</a> is the ReactiveX library for JavaScript. (ok but what does that mean?)</p>
-<p>Basically RxJS is a library for using Observables. We aren&#39;t going to discuss obseravables in detail, but, you do need to know that observables are objects that allow you to subscribe events. For example, if a value changes in an observable, subscribers will be notified of the change. Luckily for us NativeScript and Angular already know how to use obserables so we can bind observable objects straight to our UI when we receive them back from our API calls.</p>
+<p>Before you call the SpaceX API we need to first discuss RxJS. You may have heard of it before - if so feel free to skip ahead. <a href="http://reactivex.io/rxjs/">RxJS</a> is the ReactiveX library for JavaScript. (ok but what does that mean?)</p>
+<p>RxJS is a library for using Observables. We aren&#39;t going to discuss obseravables in detail, but, you do need to know that observables are objects that allow you to subscribe events. For example, if a value changes in an observable, subscribers will be notified of the change. Luckily for us NativeScript and Angular already know how to use obserables so we can bind observable objects straight to our UI when we receive them back from our API calls.</p>
 <h3 id="calling-an-api">Calling an API</h3>
 <h4 class="exercise-start">
     <b>Exercise</b>: Calling an API
@@ -922,16 +922,19 @@ export class ListComponent implements OnInit {
 import &#39;rxjs/add/operator/map&#39;;
 import { Observable } from &quot;rxjs/Observable&quot;;
 </code></pre>
-<p>Next add methods to made the api calls.</p>
-<pre><code class="lang-javascript">public getUpcomingFromApi(): Observable&lt;Launch[]&gt; {
-        return this.http.get&lt;Launch[]&gt;(&#39;https://api.spacexdata.com/v2/launches/upcoming&#39;); // upcoming launches
+<p>Next add methods to made the API calls.</p>
+<pre><code class="lang-javascript">public getUpcomingFromAPI(): Observable&lt;Launch[]&gt; {
+        return this.http.get&lt;Launch[]&gt;(&#39;https://API.spacexdata.com/v2/launches/upcoming&#39;); // upcoming launches
     }
 
-public getPastFromApi(): Observable&lt;Launch[]&gt; {
-    return this.http.get&lt;Launch[]&gt;(&#39;https://api.spacexdata.com/v2/launches?launch_year=2017&#39;); // past launches
+public getPastFromAPI(): Observable&lt;Launch[]&gt; {
+    return this.http.get&lt;Launch[]&gt;(&#39;https://API.spacexdata.com/v2/launches?launch_year=2017&#39;); // past launches
 }
 </code></pre>
-<p>Where does <code>this.http</code> come from? This (no pun intended) is an instance of the Angular <code>HttpClient</code> which needs to be injected via the constructor. Go ahead and update the constructor of the <code>LaunchService</code> to inject the <code>HttpClient</code>: <code>constructor(private http: HttpClient) {</code>.</p>
+<blockquote>
+<p><strong>Where does <code>this.http</code> come from?</strong></p>
+<p>This (no pun intended) is an instance of the Angular <code>HttpClient</code> which needs to be injected via the constructor. Go ahead and update the constructor of the <code>LaunchService</code> to inject the <code>HttpClient</code>: <code>constructor(private http: HttpClient) {</code>.</p>
+</blockquote>
 <p>The full code listing is below.</p>
 <pre><code class="lang-javascript">import { Injectable } from &quot;@angular/core&quot;;
 import { Launch } from &#39;../models/launch&#39;
@@ -998,16 +1001,19 @@ export class LaunchService {
         return this.launches;
     }
 
-    public getUpcomingFromApi(): Observable&lt;Launch[]&gt; {
-        return this.http.get&lt;Launch[]&gt;(&#39;https://api.spacexdata.com/v2/launches/upcoming&#39;); // upcoming launches
+    public getUpcomingFromAPI(): Observable&lt;Launch[]&gt; {
+        return this.http.get&lt;Launch[]&gt;(&#39;https://API.spacexdata.com/v2/launches/upcoming&#39;); // upcoming launches
     }
 
-    public getPastFromApi(): Observable&lt;Launch[]&gt; {
-        return this.http.get&lt;Launch[]&gt;(&#39;https://api.spacexdata.com/v2/launches?launch_year=2017&#39;); // past launches
+    public getPastFromAPI(): Observable&lt;Launch[]&gt; {
+        return this.http.get&lt;Launch[]&gt;(&#39;https://API.spacexdata.com/v2/launches?launch_year=2017&#39;); // past launches
     }
 }
 </code></pre>
-<p>Notice that <code>Observables</code> are returning from the SpaceX api. Go ahead and wire up the <code>ListComponent</code> to call from the api now by updating the <code>list-component-ts</code> file to use the new methods you made.</p>
+<blockquote>
+<p><strong>NOTE</strong></p>
+<p>Notice that <code>Observables</code> are returning from the SpaceX API. Go ahead and wire up the <code>ListComponent</code> to call from the API now by updating the <code>list-component-ts</code> file to use the new methods you made.</p>
+</blockquote>
 <pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
 import { Launch } from &quot;../../models/launch&quot;;
 import { LaunchService } from &quot;../../services/launchService&quot;;
@@ -1026,13 +1032,13 @@ export class ListComponent implements OnInit {
     constructor(private launchService: LaunchService) { }
 
     ngOnInit(): void {
-        this.launchService.getUpcomingFromApi().subscribe(data =&gt; {
+        this.launchService.getUpcomingFromAPI().subscribe(data =&gt; {
             data.forEach((model) =&gt; {
                 this.upcoming.push(model);
             });
         });
 
-        this.launchService.getPastFromApi().subscribe(data =&gt; {
+        this.launchService.getPastFromAPI().subscribe(data =&gt; {
             data.forEach((model) =&gt; {   
 
                 if (!model.links.mission_patch.includes(&#39;https&#39;))
@@ -1044,9 +1050,10 @@ export class ListComponent implements OnInit {
     }
 }
 </code></pre>
-<p>The <code>subscribe</code> method is part of RxJX that we discussed earlier. When the call the SpaceX api completes, the subscribe method automatically gets called. Inside the subscribe method you are able to translate the data coming back into an array of launches which the UI already knows how to use and bind to properly.</p>
+<p>The <code>subscribe</code> method is part of RxJX that we discussed earlier. When the call the SpaceX API completes, the subscribe method automatically gets called. Inside the subscribe method you are able to translate the data coming back into an array of launches which the UI already knows how to use and bind to properly.</p>
 <blockquote>
-<p>The if statement inside the <code>getPastFromApi</code> method may look a bit strange to you (because it is). This if statement exists because by default iOS blocks non-https calls; therefore when attempting to load the mission patch images on iOS it will just fail. This limitation of iOS can be turned off in NativeScript, however, in the playground you currently do not have access to modifying this setting. Keep in mind that the playground is letting us get up and running quickly and not meant for us to push to production from this this limitation is more of a minor nuisance (hence the &quot;quick fix&quot;).</p>
+<p><strong>NOTE</strong> </p>
+<p>The if statement inside <code>getPastFromAPI()</code> may look a bit strange to you (because it is). This if statement exists because by default iOS blocks non-https calls; therefore, when attempting to load the mission patch images on iOS it will just fail. This limitation of iOS can be turned off in NativeScript, but in the Playground you can&#39;t change this setting. Keep in mind that the playground is letting us get up and running quickly and not meant for us to push to production from this this limitation is more of a minor nuisance (hence the &quot;quick fix&quot;).</p>
 </blockquote>
 <p>The last step to making everything work is to import the <code>HttpModule</code> into the app by updating the <code>app.module.ts</code>.</p>
 <pre><code class="lang-javascript">import { NgModule, NO_ERRORS_SCHEMA } from &quot;@angular/core&quot;;
@@ -1094,7 +1101,12 @@ export class AppModule { }
 </code></pre>
 <p>Save your project and take a look!
 <img src="images/chapter5/chapter5-1.jpeg" class="img-small" /></p>
+<p>This concludes the exercise.</p>
 <div class="exercise-end"></div>
+
+<p>Nice work. Adding remote APIs to yoru mobile apps isn&#39;t too difficult. Normally, we wouldn&#39;t go through the trouble of adding live data to a prototype app, but we just coudln&#39;t resist.</p>
+<p>In the next chapter, you&#39;ll finish the SpaceX app by adding a launch details page.</p>
+
 			</div>
 			<hr>
 			<div class="chapter">
